// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-test-deployment-c86dcee1",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-test-c8667035",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-test-c8667035",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "livenessProbe": {},
              "name": "test-container",
              "readinessProbe": {},
              "resources": {
                "limits": {
                  "cpu": 1,
                  "memory": "1Gi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-environment 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_environment-deployment-c80b2568",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_environment-c8045a0c",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_environment-c8045a0c",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "MY_ENV",
                  "value": "my-value",
                },
              ],
              "envFrom": [],
              "livenessProbe": {},
              "name": "with_environment-container",
              "readinessProbe": {},
              "resources": {
                "limits": {
                  "cpu": 1,
                  "memory": "1Gi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-pdp 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_pdb-deployment-c87b10de",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_pdb-c80f43fe",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_pdb-c80f43fe",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "livenessProbe": {},
              "name": "with_pdb-container",
              "readinessProbe": {},
              "resources": {
                "limits": {
                  "cpu": 1,
                  "memory": "1Gi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "plone-with_pdb-pdb-c8380749",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "plone-with_pdb-c80f43fe",
        },
      },
    },
  },
]
`;
